aws-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: educonnect-app-deployment
  labels:
    app: educonnect-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: educonnect-app
  template:
    metadata:
      labels:
        app: educonnect-app
    spec:
      containers:
      - name: educonnect-app
        image: IMAGE_URL_PLACEHOLDER
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
      imagePullSecrets:
      - name: ecr-secret
